@@ -10,7 +10,7 @@ argparse = 1.1
 codecov = 1.6.3
 collective.recipe.omelette = 0.16
 coverage = 4.0.3
-crate = 0.14.0
+crate = 0.15.0
 crate-docs-theme = 0.5.5
 docutils = 0.12
 gp.recipe.tox = 0.4
